<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_menu_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive" />
    <item
        android:id="@+id/nav_download_insights"
        android:icon="@drawable/ic_insights"
        android:title="@string/insights" />
    <item
        android:id="@+id/nav_menu_your_activity"
        android:icon="@drawable/ic_your_activity"
        android:title="@string/your_activity" />
    <item
        android:id="@+id/nav_menu_qr_code"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/qr_code" />
    <item
        android:id="@+id/nav_menu_saved"
        android:icon="@drawable/ic_saved_border"
        android:title="@string/saved" />
    <item
        android:id="@+id/nav_menu_close_friends"
        android:icon="@drawable/ic_close_friends"
        android:title="@string/close_friends" />
    <item
        android:id="@+id/nav_menu_discover_people"
        android:icon="@drawable/ic_discover_people"
        android:title="@string/discover_people" />
    <item
        android:id="@+id/nav_menu_covid19"
        android:icon="@drawable/ic_covid19_info"
        android:title="@string/covid_19_info" />
    <item
        android:id="@+id/nav_menu_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />
</menu>