<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/indicator"
        style="@style/view_separator"
        android:layout_marginTop="16dp"
        android:background="@color/light_gray"
        android:text="@string/turn_on_post_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_report"
        style="@style/bottom_sheet"
        android:layout_marginTop="8dp"
        android:text="@string/report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator" />

    <TextView
        android:id="@+id/tv_turn_on_notification"
        style="@style/bottom_sheet"
        android:layout_marginTop="4dp"
        android:text="@string/turn_on_post_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_report" />

    <TextView
        android:id="@+id/tv_copy_link"
        style="@style/bottom_sheet"
        android:layout_marginTop="4dp"
        android:text="@string/copy_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_turn_on_notification" />


    <TextView
        android:id="@+id/tv_share_to"
        style="@style/bottom_sheet"
        android:layout_marginTop="4dp"
        android:text="@string/share_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_copy_link" />

    <TextView
        android:id="@+id/tv_unFollow"
        style="@style/bottom_sheet"
        android:layout_marginTop="4dp"
        android:text="@string/unfollow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_share_to" />

    <TextView
        android:id="@+id/tv_mute"
        style="@style/bottom_sheet"
        android:layout_marginTop="4dp"
        android:text="@string/mute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unFollow" />

</androidx.constraintlayout.widget.ConstraintLayout>