<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/user_photo_01" />

    <TextView
        android:id="@+id/tv_userName_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_user"
        android:layout_alignBottom="@id/iv_user"
        android:layout_toStartOf="@id/img_btn_more_icon"
        android:layout_toEndOf="@id/iv_user"
        android:ellipsize="end"
        android:gravity="start|center"
        android:maxLines="1"
        android:text="@string/user_name"
        android:textColor="@color/black_insta"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/img_btn_more_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/iv_user"
        android:layout_alignBottom="@id/iv_user"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_baseline_more_vert_24" />

    <ImageView
        android:id="@+id/iv_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_userName_toolbar"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:adjustViewBounds="true"
        android:src="@drawable/explore_pic_09" />

    <ImageButton
        android:id="@+id/img_btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_post"
        android:layout_alignStart="@id/iv_user"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:src="@drawable/ic_like_heart_border" />

    <ImageButton
        android:id="@+id/img_btn_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_post"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_btn_like"
        android:background="@null"
        android:src="@drawable/ic_comment" />

    <ImageButton
        android:id="@+id/img_btn_send"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/iv_post"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_btn_comment"
        android:background="@null"
        android:src="@drawable/ic_share_send" />

    <ImageButton
        android:id="@+id/img_btn_save"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/iv_post"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/img_btn_more_icon"
        android:background="@null"
        android:src="@drawable/ic_saved_border" />

    <TextView
        android:id="@+id/tv_like_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_btn_like"
        android:layout_alignStart="@id/iv_user"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_sample"
        android:textColor="@color/black_insta"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_btn_like"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/tv_like_num"
        android:text="@string/likes"
        android:textColor="@color/black_insta"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_userName_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_like_num"
        android:layout_alignStart="@id/iv_user"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/user_name"
        android:textColor="@color/black_insta"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_userName_description"
        android:layout_alignStart="@id/iv_user"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="20"
        android:paddingEnd="4dp"
        android:text="@string/description_sample"
        android:textColor="@color/black_insta" />

    <TextView
        android:id="@+id/tv_viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description"
        android:layout_alignStart="@id/iv_user"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_all"
        android:textColor="@color/black_100" />

    <TextView
        android:id="@+id/tv_comment_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/tv_viewAll"
        android:text="@string/number_sample"
        android:textColor="@color/black_100" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/tv_comment_num"
        android:text="@string/comments"
        android:textColor="@color/black_100" />

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_viewAll"
        android:layout_alignStart="@id/iv_user"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/number_sample"
        android:textColor="@color/black_100"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_viewAll"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/tv_hour"
        android:text="@string/hours_ago"
        android:textColor="@color/black_100"
        android:textSize="12sp" />

</RelativeLayout>